tests/rosetta/transpiler/Swift/environment-variables-2.swift
// Generated by Mochi transpiler v0.10.42 on 2025-07-28 10:41:47 GMT+7
import Foundation

func _p(_ v: Any?) -> String {
    if let val = v { return String(describing: val) }
    return "<nil>"
}

var _nowSeed = 0
var _nowSeeded = false
func _now() -> Int {
    if !_nowSeeded {
        if let s = ProcessInfo.processInfo.environment["MOCHI_NOW_SEED"], let v = Int(s) {
            _nowSeed = v
            _nowSeeded = true
        }
    }
    if _nowSeeded {
        _nowSeed = (_nowSeed * 1664525 + 1013904223) % 2147483647
        return _nowSeed
    }
    return Int(Date().timeIntervalSince1970 * 1_000_000_000)
}
func _mem() -> Int {
    if let status = try? String(contentsOfFile: "/proc/self/status") {
        for line in status.split(separator: "\n") {
            if line.hasPrefix("VmRSS:") {
                let parts = line.split(whereSeparator: { $0 == " " || $0 == "\t" })
                if parts.count >= 2, let kb = Int(parts[1]) {
                    return kb * 1024
                }
            }
        }
    }
    return 0
}
do {
    let _benchMemStart = _mem()
    let _benchStart = _now()
    
    func hasPrefix(_ s: String, _ p: String) -> Bool {
        if (Int(((p).count)) > Int(((s).count))) {
            return false
        }
        return (String(describing: String(Array(String(describing: String(describing: s)))[0..<Int(((p).count))])) == p)
    }
    let name = "SHELL"
    let prefix = (name + "=")
    for v in os.Environ() {
        if hasPrefix(String(describing: v), String(describing: prefix)) {
            print(_p(((name + " has value ") + String(describing: String(Array(String(describing: String(describing: v)))[Int(((prefix).count))..<Int((String(describing: v).count))])))))
            return
        }
    }
    print(_p((name + " not found")))
    let _benchEnd = _now()
    let _benchMemEnd = _mem()
    print("{\n  \"duration_us\": \((_benchEnd - _benchStart) / 1000),\n  \"memory_bytes\": \(_benchMemEnd - _benchMemStart),\n  \"name\": \"main\"\n}")
}
